update reqiurements.txt and readme.md. Problem: sqlite3 is unavialivable to install

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 pygame
 numpy
-torchvision
-torch
-# pillow
-# tqdm
-# einops
-# wandb
+nltk
+numpy
+networkx
+geopandas
+scikit-learn
+scipy
+joblib
+threadpoolctl
+# sqlite3
